<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menus.OrderActivity">
    <TextView
        android:id="@+id/text_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/order_label_text"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/name_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_order" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_name"
        app:layout_constraintStart_toEndOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/address_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <EditText
        android:id="@+id/edittext_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_address_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_address"
        app:layout_constraintStart_toEndOf="@+id/text_address" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/phone_label_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_address" />

    <EditText
        android:id="@+id/edittext_phone"
        android:layout_width="@dimen/dp_134"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_phone_hint"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_phone"
        app:layout_constraintStart_toEndOf="@+id/text_phone" />

    <TextView
        android:id="@+id/text_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/note_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

    <EditText
        android:id="@+id/edittext_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:ems="10"
        android:hint="@string/enter_note_hint"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_note"
        app:layout_constraintStart_toEndOf="@+id/text_note" />

    <TextView
        android:id="@+id/text_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/choose_delivery_method"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_note" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_delivery">

        <RadioButton
            android:id="@+id/radio_sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_messenger_service" />

        <RadioButton
            android:id="@+id/radio_nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/next_day_ground_delivery" />

        <RadioButton
            android:id="@+id/radio_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
