<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menus.MenusActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/text_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/intro_text"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_donut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/donuts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_intro"
            app:srcCompat="@drawable/donut_circle" />

        <ImageView
            android:id="@+id/image_ice_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/ice_cream_sandwiches"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_donut"
            app:srcCompat="@drawable/icecream_circle" />

        <ImageView
            android:id="@+id/image_froyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/froyo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_ice_cream"
            app:srcCompat="@drawable/froyo_circle" />

        <TextView
            android:id="@+id/text_donut_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/donuts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_donut"
            app:layout_constraintTop_toTopOf="@+id/image_donut" />

        <TextView
            android:id="@+id/text_ice_cream_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/ice_cream_sandwiches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_ice_cream"
            app:layout_constraintTop_toTopOf="@+id/image_ice_cream" />

        <TextView
            android:id="@+id/text_froyo_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/froyo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_froyo"
            app:layout_constraintTop_toTopOf="@+id/image_froyo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dp_16"
        app:srcCompat="@drawable/ic_shopping_cart" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
